# lunar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  reference.md
3rdparties/glad/: CMakeLists.txt  glad.c
glad/: glad.h
lunar/render/: CMakeLists.txt  main.cpp  window.hpp
modules/config/: default-interface.yaml  interface.yaml
modules/interface/: CMakeLists.txt  eventmap.cpp  interface.cpp  interface.hpp
modules/main/: main-smiling-box.cpp  main.cpp
modules/main/GLSL/: box-fs.glsl  box-vs.glsl
modules/model/: CMakeLists.txt  material.cpp  material.hpp  model.cpp  model.hpp  texture.cpp  texture.hpp
modules/render/: CMakeLists.txt  camera.cpp  camera.hpp  postprocess.cpp  postprocess.hpp  render.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp  x.py
modules/render/GLSL/: compute.glsl  fragment.glsl  phong-shading-box-fs.glsl  phong-shading-box-vs.glsl  phong-shading-light-fs.glsl  smiling-box-fs.glsl  vertex.glsl
modules/render/glsllibs/: 3shade2.glsl  postprocess-fs.glsl  postprocess-vs.glsl
src/: main.cpp
tests/: CMakeLists.txt  main-phong-shading.cpp  main-smiling-box.cpp  test_glm.cpp  test_open_window.cpp
tests/phong-shading/: phong-shading-box-fs.glsl
